--- a/src/main/webapp/vistas/controlsolicitudes/List.xhtml
+++ b/src/main/webapp/vistas/controlsolicitudes/List.xhtml
@@ -24,8 +24,8 @@
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                        <p:ajax event="rowSelect"   update="viewButton editButton deleteButton"/>
+                        <p:ajax event="rowUnselect" update="viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
@@ -106,7 +106,6 @@
                             <h:outputText value="#{item.proyecto}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{controlsolicitudesController.prepareCreate}" update=":ControlsolicitudesCreateForm" oncomplete="PF('ControlsolicitudesCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":ControlsolicitudesViewForm" oncomplete="PF('ControlsolicitudesViewDialog').show()" disabled="#{empty controlsolicitudesController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":ControlsolicitudesEditForm" oncomplete="PF('ControlsolicitudesEditDialog').show()" disabled="#{empty controlsolicitudesController.selected}"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{controlsolicitudesController.destroy}" update=":growl,datalist" disabled="#{empty controlsolicitudesController.selected}"/>
@@ -114,8 +113,6 @@
                     </p:dataTable>
                 </p:panel>
             </h:form>
-
-            <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>
         </ui:define>
