--- a/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
@@ -11,11 +11,9 @@
         <p:dialog id="SolicitudesInternetEditDlg" widgetVar="SolicitudesInternetEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditSolicitudesInternetTitle}">
             <h:form id="SolicitudesInternetEditForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{solicitudesInternetController.selected != null}">
+                    <p:panelGrid columns="4" rendered="#{solicitudesInternetController.selected != null}">
                         <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_solicitud}" for="solicitud" />
                         <p:inputText id="solicitud" value="#{solicitudesInternetController.selected.solicitud}" title="#{bundle.EditSolicitudesInternetTitle_solicitud}" required="true" requiredMessage="#{bundle.EditSolicitudesInternetRequiredMessage_solicitud}"/>
-                        <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_gestor}" for="gestor" />
-                        <p:inputText id="gestor" value="#{solicitudesInternetController.selected.gestor}" title="#{bundle.EditSolicitudesInternetTitle_gestor}" required="true" requiredMessage="#{bundle.EditSolicitudesInternetRequiredMessage_gestor}"/>
                         <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_nombre}" for="nombre" />
                         <p:inputText id="nombre" value="#{solicitudesInternetController.selected.nombre}" title="#{bundle.EditSolicitudesInternetTitle_nombre}" />
                         <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_dependencia}" for="dependencia" />
@@ -50,15 +48,12 @@
                         <p:calendar id="fechaVentanilla" pattern="MM/dd/yyyy" value="#{solicitudesInternetController.selected.fechaVentanilla}" title="#{bundle.EditSolicitudesInternetTitle_fechaVentanilla}"  showOn="button"/>
                         <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_justificacion}" for="justificacion" />
                         <p:inputText id="justificacion" value="#{solicitudesInternetController.selected.justificacion}" title="#{bundle.EditSolicitudesInternetTitle_justificacion}" />
-                        <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_status}" for="status" />
-                        <p:inputText id="status" value="#{solicitudesInternetController.selected.status}" title="#{bundle.EditSolicitudesInternetTitle_status}" required="true" requiredMessage="#{bundle.EditSolicitudesInternetRequiredMessage_status}"/>
-                        <p:outputLabel value="#{bundle.EditSolicitudesInternetLabel_controlsolicitudes}" for="controlsolicitudes" />
-                        <p:selectOneMenu id="controlsolicitudes" value="#{solicitudesInternetController.selected.controlsolicitudes}" >
-                            <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
-                            <f:selectItems value="#{controlsolicitudesController.itemsAvailableSelectOne}"
-                                           var="controlsolicitudesItem"
-                                           itemValue="#{controlsolicitudesItem}"/>
-                        </p:selectOneMenu>
+                        <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_gestor}" for="gestor" />
+                            <p:selectOneMenu id="gestor" value="#{solicitudesInternetController.selected.gestor}" >
+                            <f:selectItems value="#{gestoresController.getItemsActivos()}"
+                                           var="gestorItem"
+                                           itemValue="#{gestorItem}"/>
+                         </p:selectOneMenu>                        
                     </p:panelGrid>
                     <p:commandButton actionListener="#{solicitudesInternetController.update}" value="#{bundle.Save}" update="display,:SolicitudesInternetListForm:datalist,:growl" oncomplete="handleSubmit(args, 'SolicitudesInternetEditDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="SolicitudesInternetEditDialog.hide()"/>
