Images 95% Mostrar y subir imagenes de las personas Mostrar imagenes en miniatura Personas update wizard (bien)

--- a/src/main/webapp/vistas/gestores/List.xhtml
+++ b/src/main/webapp/vistas/gestores/List.xhtml
@@ -55,43 +55,43 @@
                             <f:facet name="header">
                                 <h:outputText value="Gestor Imagenes"/>
                             </f:facet>
-                            <p:link outcome="verImg" value="ID ANV">
+                            <p:link outcome="verImg" value="ID ANV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}" />
                                 <f:param  name="atributo" value="idoficialanv" />
                             </p:link>
-                            <p:link outcome="verImg" value="  ID REV">
+                            <p:link outcome="verImg" value="  ID REV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="idoficialrev" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="CRED ANV">
+                            <p:link outcome="verImg" value="CRED ANV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="credoficialanv" />
                             </p:link> 
-                            <p:link outcome="verImg" value="  CRED REV">
+                            <p:link outcome="verImg" value="  CRED REV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="credoficialrev" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="MANO IZQ">
+                            <p:link outcome="verImg" value="MANO IZQ" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="huellamanoizq" />
                             </p:link>
-                            <p:link outcome="verImg" value="  MANO DER">
+                            <p:link outcome="verImg" value="  MANO DER" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="huellamanoder" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="PULGAR">
+                            <p:link outcome="verImg" value="PULGAR" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="huellapulgar" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="FOTO">
+                            <p:link outcome="verImg" value="FOTO" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="foto" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="CURP">
+                            <p:link outcome="verImg" value="CURP" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="imgcurp" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="NOMBRAMIENTO">
+                            <p:link outcome="verImg" value="NOMBRAMIENTO" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.idpersona.idpersona}"/>
                                 <f:param  name="atributo" value="nombramiento" />
                             </p:link>
@@ -106,43 +106,43 @@
                             <f:facet name="header">
                                 <h:outputText value="Desigandor Imagenes"/>
                             </f:facet>
-                            <p:link outcome="verImg" value="ID ANV">
+                            <p:link outcome="verImg" value="ID ANV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="idoficialanv" />
                             </p:link> 
-                            <p:link outcome="verImg" value="  ID REV">
+                            <p:link outcome="verImg" value="  ID REV" target="_blank" >
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="idoficialrev" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="CRED ANV">
+                            <p:link outcome="verImg" value="CRED ANV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="credoficialanv" />
                             </p:link> 
-                            <p:link outcome="verImg" value="  CRED REV">
+                            <p:link outcome="verImg" value="  CRED REV" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="credoficialrev" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="MANO IZQ">
+                            <p:link outcome="verImg" value="MANO IZQ" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="huellamanoizq" />
                             </p:link>
-                            <p:link outcome="verImg" value="  MANO DER">
+                            <p:link outcome="verImg" value="  MANO DER" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="huellamanoder" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="PULGAR">
+                            <p:link outcome="verImg" value="PULGAR" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="huellapulgar" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="FOTO">
+                            <p:link outcome="verImg" value="FOTO" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="foto" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="CURP">
+                            <p:link outcome="verImg" value="CURP" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="imgcurp" />
                             </p:link> <br/>
-                            <p:link outcome="verImg" value="NOMBRAMIENTO">
+                            <p:link outcome="verImg" value="NOMBRAMIENTO" target="_blank">
                                 <f:param  name="idpersonas" value="#{item.designador.idpersona}"/>
                                 <f:param  name="atributo" value="nombramiento" />
                             </p:link>
@@ -151,7 +151,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListGestoresTitle_designador}"/>
                             </f:facet>
-                            <p:link  outcome="verImg" value="Imagen" >
+                            <p:link  outcome="verImg" value="Imagen" target="_blank" >
                                 <f:param  name="nomgestor" value="#{item.gestor}" />
                                 <f:param  name="atributo"  value="nomgestor" />
                             </p:link>
