--- a/src/main/webapp/vistas/personas/View.xhtml
+++ b/src/main/webapp/vistas/personas/View.xhtml
@@ -11,44 +11,107 @@
         <p:dialog id="PersonasViewDlg" widgetVar="PersonasViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewPersonasTitle}">
             <h:form id="PersonasViewForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{personasController.selected != null}">
-                        <h:outputText value="#{bundle.ViewPersonasLabel_idpersona}"/>
-                        <h:outputText value="#{personasController.selected.idpersona}" title="#{bundle.ViewPersonasTitle_idpersona}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_tipo}"/>
-                        <h:outputText value="#{personasController.selected.tipo}" title="#{bundle.ViewPersonasTitle_tipo}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_curp}"/>
-                        <h:outputText value="#{personasController.selected.curp}" title="#{bundle.ViewPersonasTitle_curp}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_nombre}"/>
-                        <h:outputText value="#{personasController.selected.nombre}" title="#{bundle.ViewPersonasTitle_nombre}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_apellidop}"/>
-                        <h:outputText value="#{personasController.selected.apellidop}" title="#{bundle.ViewPersonasTitle_apellidop}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_apellidom}"/>
-                        <h:outputText value="#{personasController.selected.apellidom}" title="#{bundle.ViewPersonasTitle_apellidom}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_grado}"/>
-                        <h:outputText value="#{personasController.selected.grado}" title="#{bundle.ViewPersonasTitle_grado}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_cargo}"/>
-                        <h:outputText value="#{personasController.selected.cargo}" title="#{bundle.ViewPersonasTitle_cargo}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_correo1}"/>
-                        <h:outputText value="#{personasController.selected.correo1}" title="#{bundle.ViewPersonasTitle_correo1}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_correo2}"/>
-                        <h:outputText value="#{personasController.selected.correo2}" title="#{bundle.ViewPersonasTitle_correo2}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_correo3}"/>
-                        <h:outputText value="#{personasController.selected.correo3}" title="#{bundle.ViewPersonasTitle_correo3}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_telefono}"/>
-                        <h:outputText value="#{personasController.selected.telefono}" title="#{bundle.ViewPersonasTitle_telefono}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_domicilioOficina}"/>
-                        <h:outputText value="#{personasController.selected.domicilioOficina}" title="#{bundle.ViewPersonasTitle_domicilioOficina}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_telpersonal}"/>
-                        <h:outputText value="#{personasController.selected.telpersonal}" title="#{bundle.ViewPersonasTitle_telpersonal}"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_dompersonal}"/>
-                        <h:outputText value="#{personasController.selected.dompersonal}" title="#{bundle.ViewPersonasTitle_dompersonal}"/>
-                        <h:outputText value="DEPENDENCIA"/>
-                        <h:outputText value="#{personasController.selected.idinstitucion.idorganismo.iddependencia.siglas}" title="DEPENDENCIA"/>
-                        <h:outputText value="ORGANISMO"/>
-                        <h:outputText value="#{personasController.selected.idinstitucion.idorganismo.nombre}" title="oRGANISMO"/>
-                        <h:outputText value="#{bundle.ViewPersonasLabel_idinstitucion}"/>
-                        <h:outputText value="#{personasController.selected.idinstitucion.nombre}" title="#{bundle.ViewPersonasTitle_idinstitucion}"/>
-                    </p:panelGrid>
+                    <p:panel header="Datos de la persona">
+                        <p:panelGrid id="confirmacion" columns="3" layout="grid" columnClasses="grid,grid,grid">
+                            <p:panelGrid columns="2"  columnClasses="label, value"   >    
+                             <f:facet name="header"> <h:outputText value="INSTITUCIÓN" /> </f:facet>
+                                <h:outputText value="DEPENDENCIA"/>
+                                <h:outputText value="#{personasController.selected.idinstitucion.idorganismo.iddependencia.siglas}" title="DEPENDENCIA"/>
+                                <h:outputText value="ORGANISMO"/>
+                                <h:outputText value="#{personasController.selected.idinstitucion.idorganismo.nombre}" title="oRGANISMO"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_idinstitucion}"/>
+                                <h:outputText value="#{personasController.selected.idinstitucion.nombre}" title="#{bundle.ViewPersonasTitle_idinstitucion}"/>
+                            </p:panelGrid>                                       
+                            <p:panelGrid columns="2" columnClasses="label, value">    
+                            <f:facet name="header"> <h:outputText value="INFORMACIÓN DE LA PERSONA" /> </f:facet>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_idpersona}"/>
+                                <h:outputText value="#{personasController.selected.idpersona}" title="#{bundle.ViewPersonasTitle_idpersona}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_tipo}"/>
+                                <h:outputText value="#{personasController.selected.tipo}" title="#{bundle.ViewPersonasTitle_tipo}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_curp}"/>
+                                <h:outputText value="#{personasController.selected.curp}" title="#{bundle.ViewPersonasTitle_curp}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_nombre}"/>
+                                <h:outputText value="#{personasController.selected.nombre}" title="#{bundle.ViewPersonasTitle_nombre}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_apellidop}"/>
+                                <h:outputText value="#{personasController.selected.apellidop}" title="#{bundle.ViewPersonasTitle_apellidop}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_apellidom}"/>
+                                <h:outputText value="#{personasController.selected.apellidom}" title="#{bundle.ViewPersonasTitle_apellidom}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_grado}"/>
+                                <h:outputText value="#{personasController.selected.grado}" title="#{bundle.ViewPersonasTitle_grado}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_cargo}"/>
+                                <h:outputText value="#{personasController.selected.cargo}" title="#{bundle.ViewPersonasTitle_cargo}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_correo1}"/>
+                                <h:outputText value="#{personasController.selected.correo1}" title="#{bundle.ViewPersonasTitle_correo1}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_correo2}"/>
+                                <h:outputText value="#{personasController.selected.correo2}" title="#{bundle.ViewPersonasTitle_correo2}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_correo3}"/>
+                                <h:outputText value="#{personasController.selected.correo3}" title="#{bundle.ViewPersonasTitle_correo3}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_telefono}"/>
+                                <h:outputText value="#{personasController.selected.telefono}" title="#{bundle.ViewPersonasTitle_telefono}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_domicilioOficina}"/>
+                                <h:outputText value="#{personasController.selected.domicilioOficina}" title="#{bundle.ViewPersonasTitle_domicilioOficina}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_telpersonal}"/>
+                                <h:outputText value="#{personasController.selected.telpersonal}" title="#{bundle.ViewPersonasTitle_telpersonal}"/>
+                                <h:outputText value="#{bundle.ViewPersonasLabel_dompersonal}"/>
+                                <h:outputText value="#{personasController.selected.dompersonal}" title="#{bundle.ViewPersonasTitle_dompersonal}"/>
+
+                            </p:panelGrid>       
+                            <p:panelGrid columns="2" >    
+                            <f:facet name="header"> <h:outputText value="IMÁGENES" /> </f:facet>  
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="idoficialanv" />
+                                        <p:graphicImage title="Identificacion Oficial anv"  value="#{gestoresController.getImgMini(personasController.selected.idoficialanv)}" cache="false" height="70" width="150" />
+                                </p:link>      
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">    
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="idoficialrev" />
+                                    <p:graphicImage title="Identificacion Oficial rev"  value="#{gestoresController.getImgMini(personasController.selected.idoficialrev)}" cache="false" height="70" width="150" />
+                                </p:link>  
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="credoficialanv" />
+                                    <p:graphicImage title="Credencial Oficial anv"  value="#{gestoresController.getImgMini(personasController.selected.credoficialanv)}" cache="false" height="70" width="150" />                                   
+                                </p:link>      
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="credoficialrev" />
+                                    <p:graphicImage title="Credencial Oficial rev"  value="#{gestoresController.getImgMini(personasController.selected.credoficialrev)}" cache="false" height="70" width="150" />                                  
+                                </p:link>  
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="huellamanoizq" />
+                                    <p:graphicImage title="Mano izquierda"  value="#{gestoresController.getImgMini(personasController.selected.huellamanoizq)}" cache="false" height="70" width="150" />               
+                                </p:link>      
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="huellamanoder" />
+                                    <p:graphicImage title="Mano derecha"  value="#{gestoresController.getImgMini(personasController.selected.huellamanoder)}" cache="false" height="70" width="150" />                                  
+                                </p:link>                                  
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="huellapulgar" />
+                                    <p:graphicImage title="Pulgar"  value="#{gestoresController.getImgMini(personasController.selected.huellapulgar)}" cache="false" height="70" width="150" />
+                                </p:link>
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="foto" />
+                                    <p:graphicImage title="Foto"  value="#{gestoresController.getImgMini(personasController.selected.foto)}" cache="false" height="70" width="150" />
+                                </p:link>
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="imgcurp" />
+                                    <p:graphicImage title="Curp"  value="#{gestoresController.getImgMini(personasController.selected.imgcurp)}" cache="false" height="70" width="150" />
+                                </p:link>
+                                <p:link outcome="/vistas/gestores/verImg.xhtml" target="_blank">                  
+                                    <f:param  name="idpersonas" value="#{personasController.selected.idpersona}" />
+                                    <f:param  name="atributo" value="nombramiento" />
+                                    <p:graphicImage title="Nombramiento"  value="#{gestoresController.getImgMini(personasController.selected.nombramiento)}" cache="false" height="70" width="150" />
+                                </p:link>
+                            </p:panelGrid>
+                        </p:panelGrid>               
+                    </p:panel>
+       
                     <p:commandButton value="#{bundle.Close}" onclick="PersonasViewDialog.hide()"/>
                 </h:panelGroup>
             </h:form>
