--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -11,9 +11,15 @@
 
         <ui:define name="title">
             <h:outputText value="#{bundle.ListSolicitudesInternetTitle}"></h:outputText>
+ 
         </ui:define>
 
-        <ui:define name="body">
+        <ui:define name="body">              
+            <h:form enctype="multipart/form-data">
+                <p:growl id="mensaje" showDetail="true"/>
+                <p:fileUpload mode="simple" skinSimple="true" value="#{solicitudesInternetController.file} "/>
+                <p:commandButton value="submit" actionListener="#{solicitudesInternetController.leerTxt()}"/>
+            </h:form>
             <h:form id="SolicitudesInternetListForm">
                 <p:panel header="#{bundle.ListSolicitudesInternetTitle}">
                     <p:dataTable id="datalist" value="#{solicitudesInternetController.items}" var="item"
@@ -24,8 +30,8 @@
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                        <p:ajax event="rowSelect"   update=" viewButton editButton deleteButton"/>
+                        <p:ajax event="rowUnselect" update=" viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
@@ -88,7 +94,8 @@
                             <h:outputText value="#{item.nivel}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreateDialog').show()"/>
+                            
+                            <p:commandButton id="createButtonSolicitud" icon="ui-icon-plus"   value="Estilo 1" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" disabled="#{empty solicitudesInternetController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SolicitudesInternetEditForm" oncomplete="PF('SolicitudesInternetEditDialog').show()" disabled="#{empty solicitudesInternetController.selected}"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{solicitudesInternetController.destroy}" update=":growl,datalist" disabled="#{empty solicitudesInternetController.selected}"/>
@@ -97,9 +104,11 @@
                 </p:panel>
             </h:form>
 
-            <ui:include src="Create.xhtml"/>
+
+            <ui:include src="pruebaSI.xhtml"/>
             <ui:include src="Edit.xhtml"/>
-            <ui:include src="View.xhtml"/>
+            <ui:include src="View.xhtml"/>            
+            
         </ui:define>
     </ui:composition>
 
