problemas con edit

--- a/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Create.xhtml
@@ -126,7 +126,7 @@
                         </p:panel>
                         </p:tab>
                      
-                     <p:tab title="Periodos">
+                     <p:tab title="Confirmar">
                          <p:panel header="Detalles de periodos">
                          <p:panelGrid columns="2"  class="panelGridNoBorder">
                             <p:panelGrid columns="2" rendered="#{solicitudesInternetController.selected != null}">
