Arreglo de metodos

--- a/src/main/webapp/vistas/personas/Crear.xhtml
+++ b/src/main/webapp/vistas/personas/Crear.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog position="top" height="100%" width="100%"  position="top" closable="false" id="PersonasCreateDlg" widgetVar="PersonasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePersonasTitle}">
+        <p:dialog position="top" height="100%" width="100%" closable="false" id="PersonasCreateDlg" widgetVar="PersonasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePersonasTitle}">
             <h:form id="PersonasCreateForm">
                 <p:growl id="growl"  sticky="true" showDetail="true"/>
                 <p:wizard id="wizardCrearPersonas" widgetVar="wizCrearPersonas" nextLabel="Siguiente" backLabel="Atras">
